--- a/Workflow/BASiCSworkflow.bib
+++ b/Workflow/BASiCSworkflow.bib
@@ -8,7 +8,8 @@ abstract = {Motivation: Single-cell RNA sequencing (scRNA-seq) is increasingly u
 author = {McCarthy, Davis J. and Campbell, Kieran R. and Lun, Aaron T.L. and Wills, Quin F.},
 doi = {10.1093/bioinformatics/btw777},
 file = {:Users/nils/Documents/Mendeley Desktop/btw777.pdf:pdf},
-isbn = {1367-4811 (Electronic)1367-4803 (Linking)},
+isbn = {1367-4811 (Electronic)
+1367-4803 (Linking)},
 issn = {14602059},
 journal = {Bioinformatics},
 number = {8},
@@ -23,7 +24,8 @@ abstract = {MOTIVATION: Recent transcriptome studies have revealed that total tr
 author = {Katayama, Shintaro and T{\"{o}}h{\"{o}}nen, Virpi and Linnarsson, Sten and Kere, Juha},
 doi = {10.1093/bioinformatics/btt511},
 file = {:Users/nils/Documents/Mendeley Desktop/Katayama et al. - 2013 - SAMstrt Statistical test for differential expression in single-cell transcriptome with spike-in normalization.pdf:pdf},
-isbn = {1367-4811 (Electronic)1367-4803 (Linking)},
+isbn = {1367-4811 (Electronic)
+1367-4803 (Linking)},
 issn = {13674803},
 journal = {Bioinformatics},
 number = {22},
@@ -314,4 +316,12 @@ title = {{Cellular Deconstruction: Finding Meaning in Individual Cell Variation}
 url = {http://dx.doi.org/10.1016/j.tcb.2015.07.004},
 volume = {25},
 year = {2015}
+}
+@book{Gelman2014,
+author = {Gelman, Andrew and Carlin, John and Stern, Hal and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
+isbn = {978-1439840955},
+pages = {286--288},
+publisher = {CRC Press},
+title = {{Bayesian Data Analysis}},
+year = {2014}
 }
